Bug 432005 - Vim status line cutoff with latest master
Summary: Vim status line cutoff with latest master
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: master
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-23 18:20 UTC by Kurt Hindenburg
Modified: 2021-01-26 02:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of bad status line (11.07 KB, image/png)
2021-01-23 18:21 UTC, Kurt Hindenburg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kurt Hindenburg 2021-01-23 18:20:56 UTC
STEPS TO REPRODUCE
1. vim somefile
2. search for item
3. hit n for next until you scrolldown (it works for some lines, not for others)

OBSERVED RESULT
First 30 chars on status line are blank - rest has correct info

EXPECTED RESULT
status line should always be visible

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Kurt Hindenburg 2021-01-23 18:21:27 UTC
Created attachment 135107 [details]
Screenshot of bad status line
Comment 2 Carlos Alves 2021-01-26 02:16:36 UTC
Git commit 986aed091c2d2fd709d67e01e83c5b25f4f67a3d by Carlos Alves.
Committed on 26/01/2021 at 02:03.
Pushed by hindenburg into branch 'master'.

Fix moveImage error

While changing some functions with STL, I though it was possible to move
the line from source to destination, but it is causing a problem with
console programs status line (ex: htop).

M  +1    -1    src/Screen.cpp

https://invent.kde.org/utilities/konsole/commit/986aed091c2d2fd709d67e01e83c5b25f4f67a3d