Fix moveImage error

While changing some functions with STL, I though it was possible to move
the line from source to destination, but it is causing a problem with
console programs status line (ex: htop).

BUG: 432005